complete unit6 ex2

--- a/app/code/Unit6/Computer/view/adminhtml/layout/computer_game_newcomputer.xml
+++ b/app/code/Unit6/Computer/view/adminhtml/layout/computer_game_newcomputer.xml
@@ -3,7 +3,7 @@
     <update handle="styles"/>
     <body>
         <referenceContainer name="content">
-            <uiComponent name="customblog_post_listing"/>
+            <uiComponent name="computer_new_form"/>
         </referenceContainer>
     </body>
 </page>
